# laboratory

./: README.md
agares/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
agares/src/main/kotlin/: Main.kt  UserController.kt
baal/: .gitignore  README.md  pyproject.toml
baal/titanic/: README.md  main.py
vassago/: README.md
vassago/proglog/: go.mod
vassago/proglog/cmd/server/: main.go
vassago/proglog/internal/server/: http.go  log.go
