[tool.poetry]
name = "baal"
version = "0.1.0"
description = ""
authors = ["tomoesaturn <hotarutwitter@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
black = "^22.8.0"
kaggle = "^1.5.12"
pycaret = "^2.3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
